--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-google-login",
-  "version": "3.0.3-berekuk",
+  "version": "3.0.3-berekuk2",
   "description": "A Google Login Component for React",
   "main": "dist/google-login.js",
   "scripts": {
